<resources>
    <string name="app_name">大健康商户端</string>
    <string name="rationale_ask_again">如果没有请求的权限，这个应用程序可能无法正常工作。打开应用程序设置界面修改应用程序权限。</string>
    <string name="rationale_cancle">申请权限被拒绝。</string>
    <string name="dialog_title_discount">选择商品优惠</string>
    <string name="dialog_title_customer_telephone">修改手机号码</string>
    <string name="dialog_message_wait">请求中，请稍后...</string>
    <string name="dialog_message_delete_service_flag">是否删除所选标签？</string>
    <string name="dialog_message_offline_service">是否下架此服务？</string>
    <string name="dialog_message_online_service">是否上架此服务？</string>
    <string name="dialog_message_delete_photo">是否删除所选照片？</string>
    <string name="dialog_message_delete_schedule">是否删除所选日程？</string>
    <string name="dialog_message_delete_step">是否删除所选步骤？</string>
    <string name="dialog_message_delete_introduction">是否删除所选服务介绍？</string>
    <string name="dialog_message_delete_ad">是否删除所选图片？</string>
    <string name="dialog_message_delete_goods">是否删除所选商品介绍？</string>
    <string name="dialog_message_stop_activity">是否停止此活动？</string>
    <string name="dialog_message_start_activity">是否开始此活动？</string>
    <string name="dialog_message_offline_goods">是否下架此商品？</string>
    <string name="dialog_message_online_goods">是否上架此商品？</string>
    <string name="dialog_message_delete_activity_detail">是否删除所选活动介绍？</string>
    <string name="dialog_message_delete_dynamic_detail">是否删除所选动态？</string>
    <string name="dialog_message_delete_video">是否删除所选视频？</string>
    <string name="dialog_message_delete_comment">确认删除这%1$d条评论？</string>
    <string name="dialog_message_delete_branch">是否删除此分支机构？</string>
    <string name="dialog_message_nosave_branch">未填写完整的信息将不会被保留是否退出？</string>
    <string name="dialog_message_refund">总退款金额：￥%1$s是否%2$s？</string>
    <string name="dialog_message_improve_information_reject">您的企业信息审核未通过。是否完善信息？</string>
    <string name="dialog_message_logout">是否退出登录？</string>
    <string name="dialog_message_nosave_goods_parameters">尚未填写完成的信息退出将不会保存，是否继续？</string>
    <string name="dialog_message_improve_information">完善信息可使用更多功能，是否完善？</string>
    <string name="dialog_message_delete_commodity_specifications">是否删除此商品规格？</string>
    <string name="dialog_message_nosave_commodity_specifications">您有尚未保存的信息是否继续？</string>
    <string name="dialog_message_publish_service_unfinished">您有未完成的服务信息，是否继续编辑？</string>
    <string name="dialog_message_no_save">您编辑的内容尚未保存是否保存？</string>
    <string name="tips_user_info_checking">您的企业信息正在审核中，请耐心等候。</string>
    <string name="btn_continue_edit">继续填写</string>
    <string name="btn_quit">退出</string>
    <string name="btn_login">登录</string>
    <string name="btn_commit">保存并提交</string>
    <string name="btn_upload">上传并保存</string>
    <string name="btn_add_flag">添加</string>
    <string name="btn_create_service">+　创建新服务</string>
    <string name="btn_save">保存</string>
    <string name="btn_service_offline">已下架服务</string>
    <string name="btn_service_online">已上架服务</string>
    <string name="btn_offline_service">下架此服务</string>
    <string name="btn_online_service">上架此服务</string>
    <string name="btn_offline_goods">下架此商品</string>
    <string name="btn_online_goods">上架此商品</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancle">取消</string>
    <string name="btn_camera">拍照</string>
    <string name="btn_album">从相册选择</string>
    <string name="btn_add_step">添加步骤</string>
    <string name="btn_add_schedule">添加日程</string>
    <string name="btn_add_photo">添加图片</string>
    <string name="btn_add_text">添加文案</string>
    <string name="btn_modify_text">修改内容</string>
    <string name="btn_continue_editing">继续编辑</string>
    <string name="btn_discard_editing">放弃编辑</string>
    <string name="btn_save_quit">保存并退出</string>
    <string name="btn_activity_stoped">未开始活动</string>
    <string name="btn_activity_start">已开始活动</string>
    <string name="btn_activity_stop">停止此活动</string>
    <string name="btn_activity_starting">开始此活动</string>
    <string name="btn_goods_offline">已下架商品</string>
    <string name="btn_goods_online">已上架商品</string>
    <string name="btn_create_activity">+　创建新活动</string>
    <string name="btn_create_dynamic">+　创建新动态</string>
    <string name="btn_create_goods">+　发布新商品</string>
    <string name="btn_up">上移</string>
    <string name="btn_down">下移</string>
    <string name="btn_delete">删除</string>
    <string name="btn_view_review">查看全部评论>></string>
    <string name="btn_view_qa">查看全部提问>></string>
    <string name="btn_view_consultation">查看全部咨询>></string>
    <string name="btn_view_registration">查看全部报名>></string>
    <string name="btn_view_service_consultation">查看全部人员>></string>
    <string name="btn_call_phone">拨打电话</string>
    <string name="btn_answer">回复</string>
    <string name="btn_send">发送</string>
    <string name="btn_all">全选</string>
    <string name="btn_cancle_all">取消全选</string>
    <string name="btn_manager">管理</string>
    <string name="btn_add_video">添加视频</string>
    <string name="btn_publish">确认发布</string>
    <string name="btn_activity_closed">已结束活动</string>
    <string name="btn_activity_Ongoing">进行中活动</string>
    <string name="btn_service_closed">已下架服务</string>
    <string name="btn_service_showing">展示中服务</string>
    <string name="btn_next">下一步</string>
    <string name="btn_deliver">发货</string>
    <string name="btn_immediate_delivery">立即发货</string>
    <string name="btn_agree_to_return">同意退货</string>
    <string name="btn_immediate_refund">立即退款</string>
    <string name="btn_batch_management">批量管理</string>
    <string name="btn_create_specifications">添加商品规格</string>
    <string name="btn_saved">已保存</string>
    <string name="btn_register_now">立即注册</string>
    <string name="btn_findpwd">找回密码</string>
    <string name="btn_send_code">获取验证码</string>
    <string name="btn_login_now">立即登录</string>
    <string name="btn_resend_code">重新发送</string>
    <string name="btn_register">注册</string>
    <string name="btn_confirm_modify">确认修改</string>
    <string name="btn_complete_login">完成并登录</string>
    <string name="btn_detail">查看详情</string>
    <string name="btn_not_yet">暂不完善</string>
    <string name="btn_immediate">立即完善</string>
    <string name="btn_branch_add">添加机构</string>
    <string name="btn_branch_delete">删除机构</string>
    <string name="str_sned_time">%1$d s后重发</string>
    <string name="str_answer">已回复</string>
    <string name="text_empty">暂无内容</string>
    <string name="text_empty_service">暂无服务内容</string>
    <string name="text_empty_dynamic">暂无动态内容</string>
    <string name="text_empty_orders">暂无相关订单</string>
    <string name="text_empty_goods">暂无商品信息</string>
    <string name="text_empty_activity">暂无相关活动</string>
    <string name="text_empty_service_consultation">暂无服务咨询内容</string>
    <string name="text_empty_service_consultation_user">暂无咨询人员</string>
    <string name="text_empty_service_qa">暂无服务问答内容</string>
    <string name="text_empty_dynamic_comment">暂无动态评论内容</string>
    <string name="text_empty_activity_registration">暂无活动报名内容</string>
    <string name="text_empty_service_qa_list">暂无服务提问内容</string>
    <string name="text_empty_branch">暂无分支机构</string>
    <string name="hint_login_name">请输入帐号（注册的手机号码即为帐号）</string>
    <string name="hint_login_pwd">请输入密码</string>
    <string name="hint_register_phone">请输入手机号</string>
    <string name="hint_register_code">请输入验证码</string>
    <string name="hint_register_shop">请输入店铺名称</string>
    <string name="hint_register_pwd">请输入密码（8-20位数字，字母组合)</string>
    <string name="hint_register_repwd">请再次输入密码</string>
    <string name="hint_modify_pwd_old">请输入当前密码</string>
    <string name="hint_modify_pwd_new">请输入新密码(8-20位数字，字母组合)</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_service_publis_name">请输入服务名称</string>
    <string name="hint_service_publis_phone">请填写客服电话</string>
    <string name="hint_service_publis_content">请输入服务介绍</string>
    <string name="hint_service_publis_content_promotion">请输入促销文案</string>
    <string name="hint_service_publis_flag">最多3个标签，每个标签6个字</string>
    <string name="hint_service_publis_process_schedule">请填写当日具体安排内容</string>
    <string name="hint_service_publis_introduction">请填写服务介绍内容</string>
    <string name="hint_activity_publis_detail">请填写活动介绍内容</string>
    <string name="hint_activity_publis_name">请输入活动名称</string>
    <string name="hint_activity_publis_content">请输入活动介绍</string>
    <string name="hint_dynamic_publis_content">请输入您的动态内容</string>
    <string name="hint_select_begin_date">点击选择开始时间</string>
    <string name="hint_select_end_date">点击选择结束时间</string>
    <string name="hint_activity_address">请选择活动地区</string>
    <string name="hint_activity_address_input">请填写街道，楼号，门牌号</string>
    <string name="hint_activity_phone_input">请填写客服电话</string>
    <string name="hint_activity_person_input">请填写活动上限人数</string>
    <string name="hint_goods_select_type">请选择商品类别</string>
    <string name="hint_goods_select_specifications">请完善价格信息</string>
    <string name="hint_goods_publis_name">请输入商品名称</string>
    <string name="hint_goods_publis_content">请输入商品简介</string>
    <string name="hint_goods_publis_price">请输入商品价格</string>
    <string name="hint_goods_publis_stock">请填写商品库存~</string>
    <string name="hint_goods_select_address">请选择商品发货地</string>
    <string name="hint_goods_publis_brand">请输入商品品牌</string>
    <string name="hint_goods_publis_product_name">请输入商品品名</string>
    <string name="hint_goods_select_commodity_origin">请选择商品产地</string>
    <string name="hint_goods_courier_number">请填写快递单号</string>
    <string name="hint_goods_publis_commodity_origin">请填写商品产地</string>
    <string name="hint_goods_publis_freight_amount">请输入运费金额</string>
    <string name="hint_goods_specifications">请输入商品规格(最多输入15个字符)</string>
    <string name="hint_goods_stock">请输入商品库存</string>
    <string name="hint_goods_publis_price_old">请输入商品原价</string>
    <string name="hint_goods_publis_price_now">请输入商品现价</string>
    <string name="hint_goods_publis_phone">请填写客服电话</string>
    <string name="hint_search_city">搜索城市</string>
    <string name="hint_search_goods_type">搜索三级类目</string>
    <string name="hint_branch_1">请填写机构名称</string>
    <string name="hint_branch_2">请选择所在地区</string>
    <string name="hint_branch_3">请填写详细地址(街道，楼号等)</string>
    <string name="hint_branch_4">请选择营业时间</string>
    <string name="hint_branch_5">请填写联系电话</string>
    <string name="title_user_modify_password">修改密码</string>
    <string name="title_service_publish">服务信息</string>
    <string name="title_service_publish_banner">服务轮播图</string>
    <string name="title_service_publish_promotion">服务促销信息</string>
    <string name="title_service_publish_privilege">服务特权</string>
    <string name="title_service_publish_process">服务流程</string>
    <string name="title_service_publish_introduction">服务介绍</string>
    <string name="title_service_detail">服务预览</string>
    <string name="hint_reply_content">回复：%1$s</string>
    <string name="title_service_menu_1">轮播图片</string>
    <string name="title_service_menu_2">服务信息</string>
    <string name="title_service_menu_3">促销信息</string>
    <string name="title_service_menu_4">服务特权</string>
    <string name="title_service_menu_5">服务流程</string>
    <string name="title_service_menu_6">服务介绍</string>
    <string name="title_activity_menu_2">活动信息</string>
    <string name="title_activity_menu_3">活动详情</string>
    <string name="title_activity_menu_4">查看报名</string>
    <string name="str_goods_commodity_specifications_1">规格</string>
    <string name="str_goods_commodity_specifications_2">当前库存</string>
    <string name="str_goods_commodity_specifications_3">添加预览图</string>
    <string name="str_goods_commodity_specifications_4">单价 ￥</string>
    <string name="str_activity_publish_39">自动获取定位</string>
    <string name="str_branch_1">机构名称</string>
    <string name="str_branch_2">机构地址</string>
    <string name="str_branch_3">详细地址</string>
    <string name="str_branch_4">营业时间</string>
    <string name="str_branch_5">联系电话</string>
    <string name="str_branch_6">点击添加机构图片，在分支机构列表中展示</string>
</resources>