<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgdialog"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:orientation="vertical">

        <TextView
            style="@style/TextBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/dialog_title_customer_telephone" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/EditText10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/bg_gray_edit"
            android:ems="10"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="@dimen/dp_10" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancle"
                style="@style/TextGray12Sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/btn_cancle" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <Button
                android:id="@+id/btn_ok"
                style="@style/TextRed12Sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/btn_ok" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>