<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/btn_delete"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextBlack12Sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_goods_commodity_specifications_1" />

                <EditText
                    android:id="@+id/et_specifications"
                    style="@style/EditText13sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/hint_goods_specifications"
                    android:inputType="textPersonName"
                    android:maxLength="15" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_delete"
                style="@style/TextGray12Sp"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:text="@string/btn_delete" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextBlack12Sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_goods_commodity_specifications_2" />

                        <EditText
                            android:id="@+id/et_number"
                            style="@style/EditText13sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:background="@null"
                            android:ems="10"
                            android:hint="@string/hint_goods_stock"
                            android:inputType="numberSigned" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextBlack12Sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_goods_commodity_specifications_4" />

                        <EditText
                            android:id="@+id/et_price"
                            style="@style/EditTextRed13sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:background="@null"
                            android:ems="10"
                            android:hint="@string/hint_goods_publis_price"
                            android:inputType="numberDecimal" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="0.3"
                android:orientation="vertical">


                <TextView
                    style="@style/TextBlack12Sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_goods_commodity_specifications_3" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_image"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_10"
                        android:scaleType="fitXY"
                        app:srcCompat="@mipmap/icon_add_photo" />

                    <ImageView
                        android:id="@+id/iv_delete"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignRight="@+id/iv_image"
                        android:layout_marginRight="-10dp"
                        app:srcCompat="@mipmap/icon_delete_photo" />
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                style="@style/TextWhite12Sp"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_gravity="bottom"
                android:background="@drawable/btn_flag_blue"
                android:text="@string/btn_save" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>