<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgContainer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tmp"
        android:layout_below="@+id/top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_10">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_white"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <ImageView
                        android:id="@+id/iv_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY" />

                    <LinearLayout
                        android:id="@+id/ll_add"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/dp_10">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dp_10"
                            app:srcCompat="@mipmap/icon_add_gray" />

                        <TextView
                            style="@style/TextGray3_12Sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_branch_6" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginTop="-10dp"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10">


                    <TextView
                        style="@style/TextBlack14Sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/str_branch_1"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_name"
                        style="@style/EditText13sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:background="@null"
                        android:hint="@string/hint_branch_1" />

                    <TextView
                        style="@style/TextBlack14Sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/str_branch_2"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_city"
                            style="@style/TextBlack12Sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="@dimen/dp_10"
                            android:layout_toLeftOf="@+id/ll_address"
                            android:hint="@string/hint_branch_2" />

                        <LinearLayout
                            android:id="@+id/ll_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/TextBlue12Sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/str_activity_publish_39"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                app:srcCompat="@mipmap/icon_location" />
                        </LinearLayout>
                    </RelativeLayout>


                    <TextView
                        style="@style/TextBlack14Sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="@string/str_branch_3"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_address"
                        style="@style/EditText13sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:background="@null"
                        android:hint="@string/hint_branch_3" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp">

                        <TextView
                            android:id="@id/tmp"
                            style="@style/TextBlack14Sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="@string/str_branch_4"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_toRightOf="@+id/tmp"
                            android:gravity="right|center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_time"
                                style="@style/TextBlack12Sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="@dimen/dp_10"
                                android:layout_toRightOf="@+id/tmp"
                                android:gravity="right"
                                android:hint="@string/hint_branch_4" />

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                app:srcCompat="@mipmap/icon_arrow_right_gray" />
                        </LinearLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@id/tmp"
                            style="@style/TextBlack14Sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="@string/str_branch_5"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/et_phone"
                            style="@style/EditText13sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_toRightOf="@+id/tmp"
                            android:background="@null"
                            android:gravity="right"
                            android:hint="@string/hint_branch_5"
                            android:inputType="phone"
                            android:maxLength="11" />

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/tmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/bg_white_top_round"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <Button
            android:id="@+id/btn_commit"
            style="@style/TextWhite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/bg_button"
            android:text="@string/btn_save" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title"
        android:background="@drawable/bg_title">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/height_title"
            android:layout_height="@dimen/height_title"
            android:padding="@dimen/padding_all_back"
            app:srcCompat="@mipmap/icon_arrow_left_white" />

        <TextView
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_service_publish" />

    </RelativeLayout>
</RelativeLayout>